# interop-lib

./: .clang-format  CMakeLists.txt  README.md  dictionaryi.h  interoplib.c  interoplib.h  interopstub.h  taski.h  workflowi.h
.github/workflows/: build.yaml  lint.yaml
docs/: README.md  base64.md  class.md  dictionary.md  interop.md  interoplib.md  notification.md  string.md  task.md  workflow.md
